# FraktalExplorer

./: CMakeLists.txt  FraktalExplorer_de.qm  FraktalExplorer_de.ts  FraktalExplorer_en.qm  FraktalExplorer_en.ts  FraktalExplorer_tr.qm  FraktalExplorer_tr.ts  Images.qrc  LICENSE.txt  README.txt  settings.xml.in
images/: SplashScreen.xcf
resource/: style.qss
src/main/: CMakeLists.txt  algebra_parser.cpp  algebra_parser.h  algorithmdialog.cpp  algorithmdialog.h  algorithmplugin.cpp  algorithmplugin.h  config.h.in  databankdialog.cpp  databankdialog.h  fraktale.h  fraktalwidget.cpp  fraktalwidget.h  helpdialog.cpp  helpdialog.h  lsystem_parser.cpp  lsystem_parser.h  main.cpp  mainwindow.cpp  mainwindow.h  plugin.cpp  plugin.h  plugininterface.h  pluginmanager.cpp  pluginmanager.h  renderthread.cpp  renderthread.h  xmlparser.cpp  xmlparser.h
src/main/ui/: algorithmdialog.ui  databankdialog.ui  helpdialog.ui  mainwindow.ui
src/plugins/: CMakeLists.txt
src/plugins/Bell/: CMakeLists.txt  bell.cpp
src/plugins/Bird/: CMakeLists.txt  bird.cpp
src/plugins/BlockEyes/: CMakeLists.txt  blockeyes.cpp
src/plugins/DoubleHead/: CMakeLists.txt  doublehead.cpp
src/plugins/EulerPacman/: CMakeLists.txt  eulerpacman.cpp
src/plugins/Mandelbrot/: CMakeLists.txt  mandelbrot.cpp
src/plugins/XHole/: CMakeLists.txt  xhole.cpp
